# Cyberme

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Cargo.toml  docker-compose.yml
backend/migrations/: 20260121132437_init_schema.sql
backend/src/: main.rs
frontend/: .gitignore  package-lock.json
frontend/app/: page.tsx
frontend/app/auth/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/dashboard/: AddTaskModal.tsx  WidgetCard.tsx
frontend/components/landing/: Hero.tsx  Navbar.tsx
